--- a/app/src/main/res/layout/popup_item.xml
+++ b/app/src/main/res/layout/popup_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.iam.herbaldairy.widget.text.Text xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:padding="6dp"
