--- a/app/src/main/res/layout/drawer_activity.xml
+++ b/app/src/main/res/layout/drawer_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/main_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
