--- a/app/src/main/res/layout/herb_edit_fragment.xml
+++ b/app/src/main/res/layout/herb_edit_fragment.xml
@@ -122,6 +122,11 @@
             android:layout_weight="1" />
 
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/reload"
+        android:text="RELOAD"/>
 
 
 </LinearLayout>
