--- a/app/src/main/res/layout/herb_list_item.xml
+++ b/app/src/main/res/layout/herb_list_item.xml
@@ -2,26 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="2dp">
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/mint"
         android:id="@+id/image"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="4dp" />
 
-    <com.iam.herbaldairy.widget.text.Text
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="edit"
-        android:textColor="@color/dark_text_green"
-        android:textStyle="bold"
-        android:textSize="16sp"
+    <ImageView
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:src="@drawable/settings"
+        android:layerType="software"
         android:id="@+id/edit"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp" />
+        android:layout_margin="2dp" />
     <com.iam.herbaldairy.widget.text.Text
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,16 +27,17 @@
         android:layout_toRightOf="@+id/image"
         android:layout_toLeftOf="@+id/edit"
         android:text="Мелисса лекарственная"
-        android:textSize="16sp"/>
+        android:textSize="14dp"/>
     <com.iam.herbaldairy.widget.text.Text
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/type"
         android:textColor="@color/black"
-        android:text="(flores)"
-        android:textSize="14sp"
-        android:layout_below="@+id/title"
-        android:layout_toRightOf="@+id/latin" />
+        android:text="flores"
+        android:textSize="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="2dp" />
     <com.iam.herbaldairy.widget.text.Text
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,61 +45,62 @@
         android:textColor="@color/almost_black"
         android:layout_toRightOf="@+id/image"
         android:text="Matricāria chamomīlla"
-        android:textSize="14sp"
+        android:textSize="12dp"
         android:layout_below="@+id/title" />
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/infoholder"
-        android:weightSum="4"
-        android:layout_toRightOf="@+id/image"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/latin">
+        android:layout_toRightOf="@+id/image">
         <com.iam.herbaldairy.widget.text.Text
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/weighttext"
             android:textColor="@color/black"
-            android:layout_toRightOf="@+id/image"
-            android:layout_toLeftOf="@+id/edit"
-            android:text="Weight:"
-            android:textSize="16dp"
-            android:layout_weight="1"/>
+            android:text="W:"
+            android:textSize="10dp"
+            android:layout_marginRight="6dp" />
         <com.iam.herbaldairy.widget.text.Text
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/weight"
-            android:textColor="@color/dark_text_green"
-            android:layout_toRightOf="@+id/image"
-            android:layout_toLeftOf="@+id/edit"
-            android:text="435"
-            android:textSize="16dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textStyle="bold" />
-        <com.iam.herbaldairy.widget.text.Text
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/volumetext"
-            android:textColor="@color/black"
-            android:layout_toRightOf="@+id/image"
-            android:layout_toLeftOf="@+id/edit"
-            android:text="Volume:"
-            android:textSize="16dp"
-            android:layout_weight="1"/>
-        <com.iam.herbaldairy.widget.text.Text
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/volume"
-            android:textColor="@color/dark_text_green"
-            android:layout_toRightOf="@+id/image"
-            android:layout_toLeftOf="@+id/edit"
-            android:text="4"
-            android:textSize="16dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textStyle="bold" />
+            android:textColor="@color/herb_quantity_gray"
+            android:text="435g"
+            android:textSize="10dp" />
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/centercontainer"
+        android:layout_alignTop="@+id/infoholder"
+        android:layout_toRightOf="@+id/image"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/volholder"
+            android:layout_gravity="center_horizontal">
+            <com.iam.herbaldairy.widget.text.Text
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/volumetext"
+                android:textColor="@color/black"
+                android:text="Vol:"
+                android:textSize="10dp"
+                android:layout_marginRight="6dp" />
+            <com.iam.herbaldairy.widget.text.Text
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/volume"
+                android:textColor="@color/herb_quantity_gray"
+                android:text="1.7l"
+                android:textSize="10dp" />
+        </LinearLayout>
+    </FrameLayout>
 
 </RelativeLayout>
