--- a/app/src/main/res/layout/widget_header.xml
+++ b/app/src/main/res/layout/widget_header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/header_green">
+    android:background="@color/header_background">
 
     <FrameLayout
         android:layout_width="wrap_content"
