--- a/app/src/main/res/layout/herb_edit_fragment.xml
+++ b/app/src/main/res/layout/herb_edit_fragment.xml
@@ -73,7 +73,7 @@
         app:met_bottomTextSize="16dp"
         app:met_primaryColor="@color/dark_green"
         app:met_floatingLabel="highlight"
-        android:inputType="numberSigned"
+        android:inputType="numberDecimal"
         app:met_floatingLabelTextSize="14sp"
         app:met_textColorHint="@color/black"
         android:id="@+id/volumeFactor"
@@ -112,7 +112,7 @@
             app:met_bottomTextSize="16dp"
             app:met_primaryColor="@color/dark_green"
             app:met_floatingLabel="highlight"
-            android:inputType="numberSigned"
+            android:inputType="numberDecimal"
             app:met_floatingLabelTextSize="14sp"
             app:met_textColorHint="@color/black"
             android:id="@+id/dryFactor"
