--- a/app/src/main/res/layout/drawer_activity.xml
+++ b/app/src/main/res/layout/drawer_activity.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,9 +21,17 @@
             android:scaleType="fitXY"
             android:id="@+id/background" />
 
+        <com.github.rahatarmanahmed.cpv.CircularProgressView
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:id="@+id/progressBar"
+            app:cpv_animAutostart="true"
+            app:cpv_indeterminate="true"
+            android:visibility="invisible"/>
+
         <com.iam.herbaldairy.widget.Header
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:id="@+id/actionBar"
             android:layout_alignParentTop="true" />
 
@@ -43,7 +52,7 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="306dp"
+        android:layout_width="276dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="start"
