--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,9 @@
 
     <color name="herb_quantity_gray">#777777</color>
     <color name="main_background">#ebedf8</color>
-    <color name="header_background">#0ccb25</color>
+    <color name="header_background">#096556</color>
+    <color name="very_dark_green">#220</color>
 
-    <color name="lavka_red">#a21d20</color>
     <color name="black">#000000</color>
     <color name="almost_black">#1C1C1C</color>
     <color name="transparent_black_25">#44000000</color>
